--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- css code -->
     <link rel="stylesheet" href="styles.css">
+     <meta name="language" content="HTML, CSS, JavaScript">
+    <meta name="description" content="Based in Madison, Wisconsin, Hair Day is a boutique hair salon that specializes in cut, color and
+    styling. Hair Day also offers makeup and nail services, prides itself on its warm and relaxing
+    atmosphere and is best known for edgy hair colors and on-trend cuts.">
+    <meta name="author" content="Roseph Darl">
 </head>
 
 <body>
