--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     
     <!-- icon links -->
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="logo.min.png">
 
     <!-- fontawesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
@@ -14,7 +14,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- css code -->
     <link rel="stylesheet" href="styles.css">
-     <meta name="language" content="HTML, CSS, JavaScript">
+
+    <meta name="language" content="HTML, CSS, JavaScript">
     <meta name="description" content="Based in Madison, Wisconsin, Hair Day is a boutique hair salon that specializes in cut, color and
     styling. Hair Day also offers makeup and nail services, prides itself on its warm and relaxing
     atmosphere and is best known for edgy hair colors and on-trend cuts.">
@@ -23,7 +24,7 @@
 
 <body>
     <header>
-        <img src="logo.png" alt="Hair Day Logo" width="120px">
+        <img src="logo.min.png" alt="Hair Day Logo" width="120px">
     </header>
 
     <nav>
@@ -76,7 +77,7 @@
 
     <footer>
         <div class="footer-logo">
-            <img src="logo3.png" alt="Hair Day Logo" width="120px">
+            <img src="logo3.min.png" alt="Hair Day Logo" width="120px">
        
         <div class="footer-text">
             <p>Copyright &copy; 2024, Roseph Darl. Made with &hearts;.</p>
