--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="">Home</a></li>
+            <li><a href="">Products</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">About</a></li>
         </ul>
    
 
@@ -51,14 +51,14 @@
             <h3>Our Services</h3>
             <section class="main-section2">
                 <article class="main-section2--content">
-                    <i class="fa-solid fa-scissors fa-3x"></i>
+                    <i class="fa-solid fa-scissors fa-2x"></i>
                     <h3>Men's Haircut</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem aliquam et porro earum veniam,
                         corporis consequuntur neque distinctio. Eligendi recusandae alias distinctio adipisci repellat.
                         Officiis repellendus voluptatem eveniet maxime beatae.</p>
                 </article>
                 <article class="main-section2--content">
-                    <i class="fa-solid fa-hand-sparkles fa-3x"></i>
+                    <i class="fa-solid fa-hand-sparkles fa-2x"></i>
                     <h3>Nail's Cut</h3>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Error itaque debitis delectus dolorem
                         nihil fugit eum est nobis ipsam voluptatem doloremque ducimus nesciunt sint, eos harum nulla
@@ -66,7 +66,7 @@
                 </article>
                 
                 <article class="main-section2--content">
-                    <i class="fa-solid fa-spa fa-3x"></i>
+                    <i class="fa-solid fa-spa fa-2x"></i>
                     <h3>Body Massage</h3>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam, ratione dignissimos vero
                         possimus deleniti repellat nesciunt nulla eligendi explicabo dolorum error laudantium harum
