--- a/index.html
+++ b/index.html
@@ -1,15 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>Hair Day</title>  
+    <title>Hair Day</title>
+
+    
     <!-- icon links -->
     <link rel="icon" href="logo.min.png">
+
     <!-- fontawesome cdn -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
         integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
         crossorigin="anonymous" referrerpolicy="no-referrer"/>
     <!-- css code -->
     <link rel="stylesheet" href="styles.css">
+
     <meta name="language" content="HTML, CSS, JavaScript">
     <meta name="description" content="Based in Madison, Wisconsin, Hair Day is a boutique hair salon that specializes in cut, color and
     styling. Hair Day also offers makeup and nail services, prides itself on its warm and relaxing
@@ -35,10 +40,11 @@
                     styling. Hair Day also offers makeup and nail services, prides itself on its warm and relaxing
                     atmosphere and is best known for edgy hair colors and on-trend cuts.</p>
                 <button class="button1">Book Now</button>
-                <button class="button2">Lear More</butto    n> 
+                <button class="button2">Lear More</button> 
+                </article>
         </section>
         <div class="container">
-            <h3>Our Services</h3>
+            <h2>Our Services</h2>
             <section class="main-section2">
                 <article class="main-section2--content">
                     <i class="fa-solid fa-scissors fa-2x"></i>
@@ -56,7 +62,7 @@
                 </article>
                 <article class="main-section2--content">
                     <i class="fa-solid fa-spa fa-2x"></i>
-                    <h3>Body Massage</h3>
+                    <h4>Body Massage</h4>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam, ratione dignissimos vero
                         possimus deleniti repellat nesciunt nulla eligendi explicabo dolorum error laudantium harum
                         officia ipsa cumque esse dicta, beatae facilis.</p>
@@ -67,7 +73,7 @@
     <footer>
         <div class="footer-logo">
             <img src="logo3.min.png" alt="Hair Day Logo" width="120px">
-       
+       </div>
         <div class="footer-text">
             <p>Copyright &copy; 2024, Roseph Darl. Made with &hearts;.</p>
         </div>
